# msi-edit

./: CMakeLists.txt  COPYING  README.md  SECURITY.md
.github/workflows/: msvc.yml
Documentation/: conf.py  index.rst
Documentation/process/: license-rules.rst
LICENSES/exceptions/: ImGui-exception
LICENSES/preferred/: GPL-2.0
cmake/: FindSphinx.cmake
include/msi/: MsiFile.hpp  reader.hpp
include/ui/: dialog.hpp  home.hpp  menu.hpp
src/: main.cpp
src/msi/: MsiFile.cpp  reader.cpp
src/ui/: dialog.cpp  home.cpp  menu.cpp
